--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <p>Website Portal Butterfly incubator</p>
                 <div class="portfolio-links">
                   <a href="assets/img/web/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="portal-butterflyincubator.web.id"><i class="bx bx-plus"></i></a>
-                  <a href="http://portal-butterflyincubator.web.id/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://portal-butterflyincubator.web.id/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
