--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <a href="https://github.com/muhammadferrydharmawan">muhammadferrydharmawan</a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://muhammadferrydharmawan.github.io/">muhammadferrydharmawan.github.io/</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://muhammadferrydharmawan.github.io/">muhammadferrydharmawan.github.io</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Domisili</strong> <span>Medan</span></li>
                 </ul>
               </div>
