--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <a href="https://github.com/muhammadferrydharmawan">muhammadferrydharmawan</a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://github.com/muhammadferrydharmawan">muhammadferrydharmawan.co.id</a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Domisili</strong> <span>Medan</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://muhammadferrydharmawan.github.io/">muhammadferrydharmawan.github.io</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Domisili:</strong> <span>Medan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -205,44 +205,63 @@
     </section>
     <!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
-      <div class="container" data-aos="fade-up">
+<!-- ======= Portfolio Section ======= -->
+<section id="portfolio" class="portfolio section-bg">
+  <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Portofolio</h2>
-          <p>Here my collection project. Choose the category for easy finding</p>
-        </div>
+    <div class="section-title">
+      <h2>Portofolio</h2>
+      <p>Here my collection project. Choose the category for easy finding</p>
+    </div>
 
-        <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">Web</li>
-              <!-- <li data-filter=".filter-web">Web</li> -->
-              <!-- <li data-filter=".filter-app">Diagram</li> -->
-            </ul>
+    <div class="row">
+      <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
+        <ul id="portfolio-flters">
+          <li data-filter="*" class="filter-active">Web</li>
+          <!-- <li data-filter=".filter-web">Web</li> -->
+          <!-- <li data-filter=".filter-app">Diagram</li> -->
+        </ul>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
+        
+        <!-- Portfolio Item 1 -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/web/1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Portal Butterfly Incubator</h4>
+              <a>portal-butterflyincubator.web.id</a>
+              <div class="portfolio-links">
+                <a href="assets/img/web/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="portal-butterflyincubator.web.id"><i class="bx bx-plus"></i></a>
+                <a href="https://portal-butterflyincubator.web.id" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="container">
-          <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/web/1.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>portal-butterflyincubator.web.id</h4>
-                <p>Website Portal Butterfly incubator</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/web/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="portal-butterflyincubator.web.id"><i class="bx bx-plus"></i></a>
-                  <a href="https://portal-butterflyincubator.web.id" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
+        <!-- Portfolio Item 2 -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/web/2.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Sistem Penjurusan SMA</h4>
+              <a>github.com/muhammadferrydharmawan/sistem-penjurusan-sma</a>
+              <div class="portfolio-links">
+                <a href="assets/img/web/2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="https://github.com/muhammadferrydharmawan/sistem-penjurusan-sma"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/muhammadferrydharmawan/sistem-penjurusan-sma" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </div>
+
+  </div>
+</section><!-- End Portfolio Section -->
 
   </main>
   <!-- End #main -->
