--- a/index.html
+++ b/index.html
@@ -257,6 +257,21 @@
           </div>
         </div>
 
+        <!-- Portfolio Item 3 -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/web/3.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Special Tools Management System</h4>
+              <a>github.com/muhammadferrydharmawan/sistem-penjurusan-sma</a>
+              <div class="portfolio-links">
+                <a href="assets/img/web/2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="https://github.com/muhammadferrydharmawan/special-tools-management-system"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/muhammadferrydharmawan/special-tools-management-system" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
