--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+       <!--  <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li> -->
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -115,13 +115,13 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- Skills Section -->
+    <!-- Skills Section 
     <section id="skills" class="skills section">
 
-      <!-- Section Title -->
+      <!-- Section Title 
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-      </div><!-- End Section Title -->
+      </div><!-- End Section Title 
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -134,21 +134,21 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Skills Item
 
             <div class="progress">
               <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Skills Item 
 
             <div class="progress">
               <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Skills Item
 
           </div>
 
@@ -159,14 +159,14 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Skills Item 
 
             <div class="progress">
               <span class="skill"><span>UI/UX</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Skills Item
 
             <div class="progress">
               <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
@@ -183,7 +183,7 @@
 
     </section><!-- /Skills Section -->
 
-    <!-- ======= Resume Section ======= -->
+    <!-- ======= Resume Section =======
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
 
@@ -203,7 +203,7 @@
 
       </div>
     </section>
-    <!-- End Resume Section -->
+    End Resume Section -->
 
 <!-- ======= Portfolio Section ======= -->
 <section id="portfolio" class="portfolio section-bg">
